# rustinx-react

./: .gitignore  README.md  clean.sh  deploy-to-vps.sh  dev.sh  index.html  install.sh  install_polkit.sh  mac_install.sh  package-lock.json  package.json  rustinx.service  tailwind.config.js  tsconfig.json
.claude/: settings.local.json
.github/workflows/: tauri.yml
rustinx-vps-deploy/: start-server.sh
src/: App.css  App.tsx  declarations.d.ts  index.css  main.tsx  style.css
src-tauri/: Cargo.toml  com.rustinx.pkexec.policy  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/rustinx-vps-deploy/: INSTALL.md  rustinx.service
src-tauri/src/: actix_routes.rs  auth.rs  commands.rs  config.rs  events_service.rs  lib.rs  logging.rs  main.rs  systemd.rs  util.rs
src/api/: axiosInstance.ts
src/components/: ControlPanel.tsx  Header.tsx  Login.tsx  Page.tsx  SideMenu.tsx  components-style.css  index.tsx
src/components/Config/: Config.css  Config.tsx  arguments.ts
src/components/Logs/: Logs.css  Logs.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/Status/: Status.css  Status.tsx
src/components/SystemMetrics/: SystemMetrics.css  SystemMetrics.tsx  SystemMetricsGraph.css  SystemMetricsGraph.tsx
src/components/Systemd/: Systemd.css  Systemd.tsx
src/components/nested/: SearchBar.tsx  nested.css
src/components/static/: AccessLogsData.ts
src/components/ui/: button.tsx  meteors.tsx
src/contexts/: AuthContext.tsx
